<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_header"
                android:textSize="30sp"
                android:gravity="center"
                android:layout_alignParentTop="true"/>

            <TextView
                android:id="@+id/tvPeriod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/period"
                android:textSize="25sp"
                android:layout_below="@id/tvHeader"
                android:layout_marginTop="10dp"
                android:layout_marginStart="13dp"/>

            <EditText
                android:id="@+id/etPeriod"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/period_hint"
                android:layout_below="@id/tvPeriod"
                android:autofillHints=""
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/tvPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percent"
                android:textSize="25sp"
                android:layout_below="@id/etPeriod"
                android:layout_marginTop="10dp"
                android:layout_marginStart="13dp" />

            <EditText
                android:id="@+id/etPercent"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/percent_hint"
                android:layout_below="@id/tvPercent"
                android:autofillHints=""
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/tvAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textSize="25sp"
                android:layout_below="@id/etPercent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="13dp" />

            <EditText
                android:id="@+id/etAmount"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/amount_hint"
                android:layout_below="@id/tvAmount"
                android:autofillHints="" />

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp"
                android:gravity="center"
                android:layout_below="@id/etAmount"
                android:layout_marginTop="10dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_below="@id/tvResult"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="120dp"/>

            <TextView
                android:id="@+id/tvFullResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="25sp"
                android:text=""
                android:layout_below="@id/button"/>

        </RelativeLayout>

    </ScrollView>

    <TextView
        android:id="@+id/tvAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        android:gravity="center"/>


</RelativeLayout>